[package]
name = "subito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18", features = ["full"] }
md5 = "0.7.0"
